--- a/demo/demo/build.gradle
+++ b/demo/demo/build.gradle
@@ -33,6 +33,9 @@ dependencies {
 	implementation 'org.postgresql:postgresql:42.7.2'
 	implementation 'org.bgee.log4jdbc-log4j2:log4jdbc-log4j2-jdbc4.1:1.16'
 	implementation 'com.google.guava:guava:32.1.3-jre'
+	implementation 'com.fasterxml.jackson.core:jackson-core:2.17.0'
+	implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.0'
+	implementation 'com.fasterxml.jackson.core:jackson-annotations:2.17.0'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
